--- a/blog/composer.json
+++ b/blog/composer.json
@@ -9,7 +9,8 @@
         "cviebrock/eloquent-sluggable": "^4.2",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4"
+        "laravelcollective/html": "^5.4",
+        "laracasts/flash":"2.0.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
