--- a/blog/composer.json
+++ b/blog/composer.json
@@ -7,10 +7,11 @@
     "require": {
         "php": ">=5.6.4",
         "cviebrock/eloquent-sluggable": "^4.2",
+        "laracasts/flash": "2.0.1",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
-        "laracasts/flash":"2.0.1"
+        "nesbot/carbon": "^1.22"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
